# kablam

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
contrib/: kablam.service
docs/: passes.md
src/: cli.rs  fingerprint.rs  library.rs  main.rs  processor.rs  progress.rs  scanner.rs  shazam.rs  tagger.rs  watcher.rs
